# nawa

./: .clang-format  .gitignore  Application.h  CMakeLists.txt  Config.cpp  Config.h  Connection.cpp  Connection.h  Cookie.h  Crypto.cpp  Crypto.h  Dockerfile  Encoding.cpp  Encoding.h  Exception.cpp  Exception.h  Log.cpp  Log.h  QsfException.cpp  QsfException.h  QsfRequest.cpp  QsfRequest.h  README.md  Request.cpp  Request.h  RequestHandler.cpp  RequestHandler.h  Response.cpp  Response.h  Session.cpp  Session.h  SysException.cpp  SysException.h  UserException.cpp  UserException.h  Utils.cpp  Utils.h  config.ini  configure.cmake  index.md  (+2 more)
.github/workflows/: build.yml  codeql-analysis.yml  dockerimage.yml  docs.yml
Types/: Universal.h
docker/nawa/: config.ini
docs/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  aslibrary.md  docker.md  email.md  environment.md  filters.md  gettingstarted.md  manual.dox  sessions.md
examples/: aslibrary.cpp  contactform.cpp  helloworld.cpp  multipage.cpp
include/: Application.h.in  application.h.in
include/nawa/: AccessFilterList.h  Any.h  AppInit.h  Config.h  Connection.h  Cookie.h  Crypto.h  Email.h  Encoding.h  Exception.h  File.h  Log.h  MimeMultipart.h  Request.h  RequestHandler.h  RequestHandlerLegacy.h  Session.h  SmtpMailer.h  SysException.h  Universal.h  UserException.h  Utils.h
include/nawa/Engines/: Argon2HashingEngine.h  BcryptHashingEngine.h  DefaultHashTypeTable.h  HashTypeTable.h  HashingEngine.h
include/nawa/RequestHandler/: HandleRequestFunction.h  RequestHandler.h
include/nawa/RequestHandlers/: FastcgiRequestHandler.h  HttpRequestHandler.h  RequestHandler.h
include/nawa/config/: Config.h
include/qsf/: AccessFilterList.h  AccessFilters.h  AppInit.h  Application.h  Config.h  Connection.h  Cookie.h  Crypto.h  Email.h  Encoding.h  Log.h  Request.h  RequestHandler.h  Session.h  SmtpMailer.h  SysException.h  Universal.h  UserException.h  Utils.h
include/soru/: AccessFilterList.h  AppInit.h  Config.h  Connection.h  Cookie.h  Crypto.h  Email.h  Encoding.h  Log.h  Request.h  RequestHandler.h  Session.h  SmtpMailer.h  SysException.h  Universal.h  UserException.h  Utils.h
inih/: INIReader.h  LICENSE.txt
internal/: ConnectionInitContainer.h  FlushCallbackContainer.h  systemconfig.h.in
internal/connection/: ConnectionInitContainer.h
internal/nawa/: oss.h
internal/nawarun/: nawarun.h
libs/base64/: base64.cpp  base64.h
libs/punycode/: punycode.c  punycode.h
src/: AppInit.cpp  Config.cpp  Connection.cpp  Crypto.cpp  Email.cpp  Encoding.cpp  Log.cpp  MimeMultipart.cpp  Request.cpp  RequestHandler.cpp  RequestHandlerLegacy.cpp  Session.cpp  SmtpMailer.cpp  Utils.cpp  main.cpp
src/Engines/: Argon2HashingEngine.cpp  BcryptHashingEngine.cpp  BcryptOnlyHashTypeTable.cpp  DefaultHashTypeTable.cpp
src/RequestHandler/: HandleRequestFunction.cpp  RequestHandler.cpp
src/RequestHandlers/: FastcgiRequestHandler.cpp  HttpRequestHandler.cpp  RequestHandler.cpp
src/config/: Config.cpp
src/connection/: Connection.cpp  Cookie.cpp
src/email/: Email.cpp  SmtpMailer.cpp
src/filter/: AccessFilterList.cpp
src/logging/: Log.cpp
src/mail/: EmailAddress.cpp  SmtpMailer.cpp
src/nawarun/: main.cpp  nawarun.cpp
src/request/: Env.cpp  File.cpp  Request.cpp
src/session/: Session.cpp
src/util/: Crypto.cpp  Encoding.cpp  MimeMultipart.cpp  Utils.cpp  crypto.cpp  encoding.cpp  utils.cpp
systemd/: nawa@.service  soru@.service
tests/: app.h  assertions.cpp  emailtest.cpp  gpctest.cpp  main.cpp  nawatest.cpp  qsftest.cpp  sessiontest.cpp  sessiontest.sh  sorutest.cpp  test.ini
tests/apps/: emailtest.cpp  gpctest.cpp  nawatest.cpp  sessiontest.cpp
tests/integration/: environment.cpp  http.cpp
tests/unit/: email.cpp  encoding_crypto.cpp  main.cpp  sessions.cpp  utils.cpp
v0.8/: index.md
v0.8/docs/: AccessFilterList_8cpp.html  AccessFilterList_8cpp_source.html  AccessFilterList_8h.html  AccessFilterList_8h_source.html  AccessFilter_8cpp.html  AccessFilter_8cpp_source.html  AccessFilter_8h.html  AppInit_8h.html  Application_8h.html  Application_8h.js  Argon2HashingEngine_8cpp_source.html  Argon2HashingEngine_8h.html  AuthFilter_8cpp.html  AuthFilter_8cpp_source.html  AuthFilter_8h.html  AuthFilter_8h_source.html  BcryptHashingEngine_8cpp_source.html  BcryptHashingEngine_8h.html  BcryptHashingEngine_8h_source.html  BcryptOnlyHashTypeTable_8cpp.html  BcryptOnlyHashTypeTable_8cpp_source.html  BlockFilter_8cpp_source.html  BlockFilter_8h.html  BlockFilter_8h_source.html  CMakeCCompilerId_8c.html  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  Config_8cpp.html  Config_8cpp_source.html  Config_8h.html  Config_8h_source.html  ConnectionInitContainer_8h.html  ConnectionInitContainer_8h_source.html  Connection_8cpp.html  Connection_8cpp_source.html  Connection_8h_source.html  Cookie_8cpp.html  Cookie_8cpp_source.html  Cookie_8h.html  (+404 more)
v0.9/docs/: AccessFilterList_8cpp.html  AccessFilterList_8cpp_source.html  AccessFilterList_8h.html  AccessFilterList_8h_source.html  AccessFilter_8cpp.html  AccessFilter_8cpp_source.html  AccessFilter_8h.html  AccessFilter_8h_source.html  AppInit_8cpp.html  AppInit_8cpp_source.html  AppInit_8h.html  AppInit_8h_source.html  Argon2HashingEngine_8cpp.html  Argon2HashingEngine_8cpp_source.html  Argon2HashingEngine_8h.html  Argon2HashingEngine_8h_source.html  AuthFilter_8cpp.html  AuthFilter_8cpp_source.html  AuthFilter_8h.html  AuthFilter_8h_source.html  BcryptHashingEngine_8cpp.html  BcryptHashingEngine_8cpp_source.html  BcryptHashingEngine_8h.html  BcryptHashingEngine_8h_source.html  BcryptOnlyHashTypeTable_8cpp.html  BcryptOnlyHashTypeTable_8cpp_source.html  BlockFilter_8cpp.html  BlockFilter_8cpp_source.html  BlockFilter_8h.html  BlockFilter_8h_source.html  CMakeCCompilerId_8c.html  CMakeCCompilerId_8c.js  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  Config_8cpp.html  Config_8cpp_source.html  Config_8h.html  Config_8h_source.html  ConnectionInitContainer_8h.html  (+473 more)
(+332 files in other folders)
